better defined ka/ks
included cross refs for how to calculate daf

--- a/01-Introduction.Rmd
+++ b/01-Introduction.Rmd
@@ -99,19 +99,19 @@ tibble(
 ### Macroevolutionary methods
 
 #### K~a~/K~s~
-The ratio of non-synonymous to synonymous mutations is called the K~a~/K~s~ ratio (or d~N~/d~S~ ratio as it is often referred to), and is used to infer functional impact from selection, since synonymous mutations are thought of as silent mutations with a neutral effect on the protein [@Hughes1988]. Comparing the baseline rate of mutation (synonymous) to the non-synonymous rate gives an understanding of the tolerance of amino acid alternatives in the protein, with an excess of non-synonymous mutations indicating the novel protein structures are being favoured and the protein is being positively selected for. A K~a~/K~s~ ratio greater than 1 is indicative of positive selection, while a value less than 1 is indicative of negative selection against deleterious mutations and for keeping the protein conserved.
+The ratio of non-synonymous to synonymous mutations is called the K~a~/K~s~ ratio (or d~N~/d~S~ ratio as it is often referred to), and is used to infer functional impact from selection, since synonymous mutations are thought of as silent mutations with a neutral effect on the protein [@Hughes1988]. K~a~ is the number of non-synonymous differences between sequences normalised by the total number of non-synonymous sites in the sequence. K~s~ is likewise, but for synonymous differences normalised by the total number of synonymous sites in the sequence. Comparing the baseline rate of mutation (synonymous) to the non-synonymous rate gives an understanding of the tolerance of amino acid alternatives in the protein, with an excess of non-synonymous mutations indicating the novel protein structures are being favoured and the protein is being positively selected for. A K~a~/K~s~ ratio greater than 1 is indicative of positive selection, while a value less than 1 is indicative of negative selection against deleterious mutations and for keeping the protein conserved.
 
 #### HKA
 
-The HKA test [@Hudson1987] compares between and within populations the polymorphism and divergence of two or more loci, and uses this to establish if a locus has been under selection, since variation within, and diversity between, species under neutrality should be based only on the mutation rate. The assumption that mutation rates at neutral loci is constant over time is important, as if it changes, it will affect the difference between the polymorphism and divergence. In practice the HKA test is powered for recent selection events, however, in practice it is difficult to find a putatively neutral locus [@Zhai2009].
+The HKA test [@Hudson1987] compares between and within populations the polymorphism and divergence of two or more loci, and uses this to establish if a locus has been under selection, since variation within, and diversity between, species under neutrality should be based only on the mutation rate. The assumption that mutation rates at neutral loci are constant over time is important, because if the rate changes, it will affect the difference between the polymorphism and divergence. In practice the HKA test is powered for recent selection events, however, in practice it is difficult to find a putatively neutral locus [@Zhai2009].
 
 ### Haplotypic methods
 
-There are a few methods that are different derivations and applications of looking at haplotype decay around a core \gls{snp}. @sabeti2006positive put forward the concept of using \gls{ehh}. The haplotypes that had unusually long haplotype homozygosity and a high frequency in the population indicated that the polymorphism had risen in prominence faster than it would be expected under the neutral model and therefore under selection. The main concept is that a beneficial mutation would not solely be selected for, but the surrounding region would initially be selected and therefore have a conservation effect. As time and generations progressed, this haplotype would decay due to recombination, and this haplotype decay can be used to assist in the ageing of the selection event. In order to use haplotypic methods, there is a requirement to establish the alleles that were inherited from the maternal side and those that were inherited from the paternal side constituting the two haplotypes (phasing).
+There are a few methods that are different derivations and applications of looking at haplotype decay around a core \gls{snp}. @sabeti2006positive put forward the concept of using \gls{ehh}. The haplotypes that had unusually long haplotype homozygosity and a high frequency in the population indicated that the polymorphism had risen in prominence faster than it would be expected under the neutral model and therefore under selection. The main concept is that a beneficial mutation would not solely be selected for, with the surrounding region initially "hitch-hiking" and therefore have a conservation effect. As time and generations progressed, this haplotype would decay due to recombination, and this haplotype decay can be used to assist in the ageing of the selection event. In order to use haplotypic methods, there is a requirement to establish the alleles that were inherited from the maternal side and those that were inherited from the paternal side constituting the two haplotypes (phasing).
 
 #### Integrated haplotype homozygosity score
 
-The \gls{ihs} [@voight2006map; @Szpiech2014] calculation starts with \gls{ehh}, which is the probability that 2 chromosomes carrying a core haplotype are homogenous to the distance $x$. A value of 0 represents no homozygosity, meaning all haplotypes are different, while a value of 1 is complete homozygosity  meaning all haplotypes are the same. The \gls{ehh} value versus distance is integrated to find the area under \gls{ehh} curve until \gls{ehh} decays to 0.05. This \gls{ihh} is calculated based on the ancestral or derived allele and annotated as \gls{ihh}~A~ or \gls{ihh}~D~. The unstandardised \gls{ihs} is calculated in equation \@ref(eq:ihs), which is the \texttt{selscan} version [@Szpiech2014]. Standardisation of \gls{ihs} is shown in equation \@ref(eq:stdihs), where the expectations and standard deviation of equation \@ref(eq:ihs) are estimated from the empirical distribution of SNPs whose derived allele frequency p matches the frequency at the core \gls{snp} [@voight2006map]. Large positive values indicate long haplotypes carrying the derived allele, whereas negative values indicate haplotypes carrying the ancestral allele. The calculation in @voight2006map has \gls{ihh}~A~ and \gls{ihh}~D~ switched. The @Szpiech2014 \gls{ihs} calculation is used in this thesis (equations \@ref(eq:ihs) and \@ref(eq:stdihs)). \Gls{ihs} identifies variants under selection driven to intermediate frequencies.
+The \gls{ihs} [@voight2006map; @Szpiech2014] calculation starts with \gls{ehh}, which is the probability that 2 chromosomes carrying a core haplotype are homogenous to the distance $x$. A value of 0 represents no homozygosity, meaning all haplotypes are different, while a value of 1 is complete homozygosity  meaning all haplotypes are the same. The \gls{ehh} value versus distance is integrated to find the area under \gls{ehh} curve until \gls{ehh} decays to 0.05. This \gls{ihh} is calculated based on the ancestral or derived allele and annotated as \gls{ihh}~A~ or \gls{ihh}~D~. The unstandardised \gls{ihs} is calculated in equation \@ref(eq:ihs), which is the \texttt{selscan} version [@Szpiech2014]. Standardisation of \gls{ihs} is shown in equation \@ref(eq:stdihs), where the expectations and standard deviation of equation \@ref(eq:ihs) are estimated from the empirical distribution of SNPs whose derived allele frequency (see section \@ref(dafsection)) p matches the frequency at the core \gls{snp} [@voight2006map]. Large positive values indicate long haplotypes carrying the derived allele, whereas negative values indicate haplotypes carrying the ancestral allele. The calculation in @voight2006map has \gls{ihh}~A~ and \gls{ihh}~D~ switched. The @Szpiech2014 \gls{ihs} calculation is used in this thesis (equations \@ref(eq:ihs) and \@ref(eq:stdihs)). \Gls{ihs} identifies variants under selection driven to intermediate frequencies.
 
 \begin{equation} 
 iHS_{unstd} = \ln{\frac{iHH_D}{iHH_A}}
@@ -172,7 +172,7 @@ In contrast to \gls{fwh} and \gls{td}, which compare either high or low frequenc
 
 #### F~ST~
 
-F~ST~ is a population differentiation metric that measures the differences in heterogeneity of a sub-population compared to a global population. Initially created by @Wright1951, as an inbreeding coefficient for inbreeding as a whole in a population (equation \@ref(eq:fst)), F~IT~ is the inbreeding coefficient for the individual in the total population and F~IS~ is the inbreeding coefficient for inbreeding of the individual in the subpopulation. These fixation indices provide ways of summarising population structure. Selection will act to drive an allele to fixation, whereas immigration usually reduces the frequency. When the selective advantage is strong, selection will be the dominant force on the locus, however, when the selective advantage is weak the allele will reduce in frequency and disappear. Cockerham [-@Cockerham1969; -@Cockerham1973] equated $\theta$ (population genetic differentiation) with F~ST~, extending F~ST~ from calculating population structure to population differentiation too. The fixation indices were further developed by @Weir1984 to add population size weightings to the calculation. F~ST~ values fall between 0 and 1, each representing the fixation of an allele. Large differences in F~ST~ values are indicative of population differentiation, suggesting directional selection at that locus, whereas small differences in F~ST~ indicate that the populations are similar. F~ST~ can have high variation in neighbouring loci under neutrality [@Weir2005]. Unless populations are closely related, such as northwest and southeast Europeans [@Price2008a], the noise will drown out the signal, and identification of genome-wide significance in F~ST~ will be difficult. @Weir2005 suggested taking a sliding window approach to help improve the signal to noise ratio.
+F~ST~ is a population differentiation metric that measures the differences in heterogeneity of a sub-population compared to a global population. Initially created by @Wright1951, as an inbreeding coefficient for inbreeding as a whole in a population (equation \@ref(eq:fst)), F~IT~ is the inbreeding coefficient for the individual in the total population and F~IS~ is the inbreeding coefficient for inbreeding of the individual in the subpopulation. Both F~IT~ and F~IS~ compare the observed heterozygosity of the individual with the expected heterozygosity in either the total population (F~IT~), or the subpopulation (F~IS~). These fixation indices provide ways of summarising population structure. Selection will act to drive an allele to fixation, whereas immigration usually reduces the frequency. When the selective advantage is strong, selection will be the dominant force on the locus, however, when the selective advantage approaches zero, the allele will begin to act neutrally and disappear with a probability of one minus its frequency [@ref]. Cockerham [-@Cockerham1969; -@Cockerham1973] equated $\theta$ (population genetic differentiation) with F~ST~, extending F~ST~ from calculating population structure to population differentiation too. The fixation indices were further developed by @Weir1984 to add population size weightings to the calculation. F~ST~ values fall between 0 and 1, each representing the fixation of an allele. Large differences in F~ST~ values are indicative of population differentiation, suggesting directional selection at that locus, whereas small differences in F~ST~ indicate that the populations are similar. F~ST~ can have high variation in neighbouring loci under neutrality [@Weir2005]. Unless populations are closely related, such as northwest and southeast Europeans [@Price2008a], the noise will drown out the signal, and identification of genome-wide significance in F~ST~ will be difficult. @Weir2005 suggested taking a sliding window approach to help improve the signal to noise ratio.
 
 \begin{equation} 
 F_{ST} = \frac{F_{IT}{-}F_{IS}}{1{-}F_{IS}}
@@ -189,7 +189,7 @@ Selection by conditional coalescent tree (@Wang2014) detects recent positive sel
 
 #### Change in derived allele frequency {#dafsection}
 
-Similar to F~ST~, \gls{ddaf} looks at population differentiation. The derived allele is determined through the use of an ancestral out-group such as chimpanzees when used in human populations. \gls{ddaf} measures the absolute difference in the derived allele frequency between two populations [@Grossman2010] and has greater power to detect sweeps, both partial and complete, and outperforms \gls{xpehh} for partial sweeps [@Colonna2014]. \gls{ddaf} is part of the composite of multiple sites statistic [@Grossman2010] but has also been used as a standalone metric in humans [@Colonna2014; @Gudbjartsson2015] and in other species such as cattle [@Randhawa2014] to measure differentiation.
+Similar to F~ST~, \gls{ddaf} looks at population differentiation. The derived allele is determined through the use of an ancestral out-group such as chimpanzees when used in human populations. \Gls{daf} itself is calculated by determining the ancestral and derived state for an allele and calculating the allele frequency with regard to the derived state.\gls{ddaf} measures the absolute difference in the derived allele frequency between two populations [@Grossman2010] and has greater power to detect sweeps, both partial and complete, and outperforms \gls{xpehh} for partial sweeps [@Colonna2014]. \gls{ddaf} is part of the composite of multiple sites statistic [@Grossman2010] but has also been used as a standalone metric in humans [@Colonna2014; @Gudbjartsson2015] and in other species such as cattle [@Randhawa2014] to measure differentiation.
 
 ### Composite methods
 
@@ -243,7 +243,7 @@ In order to use haplotypic methods, (re)construction of haplotypes is required. 
 
 ## Improving GWAS
 
-\Gls{gwas} are a method to scan genomes, usually \gls{snp} genotype data, for association with a phenotype. The strength of \gls{gwas} is that prior knowledge of loci is not required and can be used as a tool for hypothesis generation. \Gls{gwas}, because of the large number of association tests, require large cohorts of samples to achieve sufficient power for statistical significance. As the effect size for a variant decreases, larger sample sizes are also needed, as power is proportional to the square of the effect size [@Korte2013; @Hemani2013]. Limitations in recruiting sufficient numbers of participants for \gls{gwas} therefore requires new ways of increasing power to detect smaller effects without needing to increase sample size, as outlined in this section. The goal of being able to prioritise \gls{gwas} results by using additional information, such as incorporating \gls{ld} or selection statistics by using a weighting system to increase the power of a \gls{gwas}, has been suggested [@Ayodo2007; @Roeder2006]. When \gls{ld} between observed \glspl{snp} and causal variants is high, such as in the case of selection, greater power in \gls{gwas} can be achieved by focusing on searching for non-additive variance [@Hemani2013].
+\Gls{gwas} is a method to scan genomes, usually \gls{snp} genotype data, for association with a phenotype. The strength of \gls{gwas} is that prior knowledge of loci is not required and can be used as a tool for hypothesis generation. \Gls{gwas}, because of the large number of association tests, require large cohorts of samples to achieve sufficient power for statistical significance. As the effect size for a variant decreases, larger sample sizes are also needed, as power is proportional to the square of the effect size [@Korte2013; @Hemani2013]. Limitations in recruiting sufficient numbers of participants for \gls{gwas} therefore requires new ways of increasing power to detect smaller effects without needing to increase sample size, as outlined in this section. The goal of being able to prioritise \gls{gwas} results by using additional information, such as incorporating \gls{ld} or selection statistics by using a weighting system to increase the power of a \gls{gwas}, has been suggested [@Ayodo2007; @Roeder2006]. When \gls{ld} between observed \glspl{snp} and causal variants is high, such as in the case of selection, greater power in \gls{gwas} can be achieved by focusing on searching for non-additive variance [@Hemani2013].
 
 The basis of \gls{gwas} studies is to identify \glspl{snp} that are associated with differences in the mean of a trait. These studies do not necessarily identify the causal \gls{snp} but instead identify a marker for the causal variant, usually in \gls{ld}. @Fisher1919 showed that total genetic variance could be split into components of additive, dominance and epistatic effects. The additive component has been shown to contribute the most to the overall genetic variance, with epistatic variance contributing little in an outbred population [@Hill2008]. Complex traits gain their complexity from being the sum of interactions from many small effect loci, or the product of non-additive interactions between loci and the environment, making it challenging to find the exact contribution of a locus to a trait [@Fu2013a]. These small, true effect loci can end up non-significant due to the noise in the data but might be  retrieved using methods that find non-additive effects. 
 
@@ -266,7 +266,7 @@ Explained heritability is defined as the proportion of heritability (or phenotyp
 
 ### Selection and GWAS
 
-The significance of \gls{gwas} results is greatly increased when selection statistics and association studies are combined, this has been applied in a \gls{gwas} for malarial resistance variants [@Ayodo2007]. A smaller sample size can be used if there is evidence of positive selection because the beneficial allele will rise in prevalence and be in high \gls{ld} with other variants (due to genetic hitch-hiking) which can act as proxy markers [@Karlsson2014]. Complex disease traits compared to Mendelian disease associated traits have a bias towards larger mouse-human K~a~/K~s~ ratios, by comparing the K~a~/K~s~ ratios for ortholog genes between mouse and human, which suggests that evidence of positive selection could be utilised in identifying variation associated with complex disease [@Thomas2004].
+The significance of \gls{gwas} results is greatly increased when selection statistics and association studies are combined, this has been applied in a \gls{gwas} for malarial resistance variants [@Ayodo2007]. A smaller sample size can be used if there is evidence of positive selection because the beneficial allele will rise in prevalence and be in high \gls{ld} with other variants (due to genetic hitch-hiking) which can act as proxy markers [@Karlsson2014]. The converse would apply for negative selection. Complex disease traits compared to Mendelian disease associated traits have a bias towards larger mouse-human K~a~/K~s~ ratios, by comparing the K~a~/K~s~ ratios for ortholog genes between mouse and human, which suggests that evidence of positive selection could be utilised in identifying variation associated with complex disease [@Thomas2004].
 
 ### Pathway analysis
 
@@ -296,7 +296,7 @@ The genetic influence of urate and gout is found in the under-excretion of serum
 
 <!-- Heritability of \gls{bmi} ranges from 45% to 84% in twin studies [@Schousboe2003]. -->
 
-There have been multiple genetic loci associated with \gls{t2d} [@Billings2010] and \gls{bmi} [@Locke2015], however, @Chen2010 found no evidence for enrichment in selection for \gls{bmi}, but found significant enrichment for \gls{t2d}. The genes associated with \gls{t2d} have been found to be differentiated by population, however the individual \glspl{snp} are often not [@pickrell2009signals]. @Koh2014 identified six \glspl{snp} in or near nine genes that had been reported as \gls{t2d} associated and overlapped with evidence of positive selection in East Asian populations. Common variants that have been found in European populations associating with obesity do not replicate in the Samoan population [@Karns2012], although this is likely due to power. The non-replication of European variants in Polynesians and the high prevalence of obesity in Polynesian populations suggest there is likely to be some population specific variants that are yet to be identified, similar to the Polynesian specific variant in _CREBRF_ (rs373863828), associated with obesity and protection for \gls{t2d}, identified in the Samoan population [@Minster2016]. Rare variants tend to be recent and therefore geographically restricted [@1KGP2012].
+There have been multiple genetic loci associated with \gls{t2d} [@Billings2010] and \gls{bmi} [@Locke2015], however, @Chen2010 found no evidence for enrichment in selection for \gls{bmi}, but found significant enrichment for \gls{t2d}. The genes associated with \gls{t2d} have been found to be differentiated by population, however the individual \glspl{snp} are often not [@pickrell2009signals]. @Koh2014 identified six \glspl{snp} in or near nine genes that had been reported as \gls{t2d} associated and overlapped with evidence of positive selection in East Asian populations. Common variants that have been found in European populations associating with obesity do not replicate in the Samoan population, although this is likely due to power [@Karns2012]. The non-replication of European variants in Polynesians and the high prevalence of obesity in Polynesian populations suggest there is likely to be some population specific variants that are yet to be identified, similar to the Polynesian specific variant in _CREBRF_ (rs373863828), associated with obesity and protection for \gls{t2d}, identified in the Samoan population [@Minster2016]. Rare variants tend to be recent and therefore geographically restricted [@1KGP2012].
 
 The benefits of urate are in line with the categories found to be enriched by selection in genome wide scans. Urate is an anti-oxidant in the blood, acting to protect not just erythrocytes but also T and B lymphocytes and macrophages [@Ames1981]. Urate has also been hypothesised to have had a survival advantage during the Miocene period, when a series of mutations in urate oxidase occurred, leading to elevated urate. \Gls{hu} enables blood pressure to be maintained under low salt dietary conditions [@Watanabe2002]. Serum urate is also a potent anti-oxidant which accounts for >50% of the anti-oxidant activity of the blood [@Glantzounis2005; @Parmar2009]. Later in life elevated serum urate is associated with increased cognitive function [@Euser2009]. Urate crystals activate the NLRP3 inflammasome which plays an important role in systemic infection and sepsis [@Opitz2009]. The role of urate in these situations shows that while \gls{hu} is now considered as contributing to disease (such as gout), in the past it may have influenced longevity and survival, therefore increasing reproductive success and being a phenotype that has undergone selection. 
 
